@@ -5,6 +5,8 @@ Revision history for Games-Solitaire-Verify
         - lib/Games/Solitaire/Verify/Card.pm :
             - Add the id() slot.
             - Add the data() slot.
+        - lib/Games/Solitaire/Verify/State.pm :
+            - Add the add_column method.
 
 0.0901  Thu Jun  2 21:24:24 IDT 2011
         - Now importing Dumper from Data::Dumper properly.
